2000-06-05  Jakub Jelinek  <jakub@redhat.com>
	    Nathan Sidwell <nathan@codesourcery.com>

	* gcc.c-torture/compile/20000605-1.c: New test.

2000-06-03  David Billinghurst  <David Billinghurst@riotinto.com.au>

        * g77.f-torture/compile/20000601-1.f:  New test.

2000-06-03  Richard Henderson  <rth@cygnus.com>

	* gcc.c-torture/execute/20000603-1.c: New.

2000-06-02  Zack Weinberg  <zack@wolery.cumb.org>

	* gcc.dg/noreturn-1.c (foo7, foo8): Revert previous change.
	* gcc.dg/noreturn-2.c (noreturn): Likewise.

2000-06-01  Zack Weinberg  <zack@wolery.cumb.org>

	* gcc.dg/compare2.c (case 12): XFAIL.
	* gcc.dg/noreturn-1.c (foo7, foo8): XFAIL.
	* gcc.dg/noreturn-2.c (noreturn): XFAIL.

	* gcc.dg/cpp-tradwarn2.c: Update egrep pattern.

2000-05-29  Zack Weinberg  <zack@wolery.cumb.org>

	* gcc.dg/cpp-mi.c: Add another case, cpp-mix.h, where the
	guard macro is already defined when the header is first
	included.
	* gcc.dg/cpp-mix.h: New file.
	* gcc.dg/endif-label.c: Update patterns to match compiler.

	* g++.brendan/complex1.C: Declare abort.
	* g++.law/refs4.C: Remove XFAIL.
	* g++.oliva/expr2.C: Declare abort and exit.

2000-05-28  Alexandre Oliva  <aoliva@cygnus.com>

	* gcc.c-torture/execute/20000528-1.c: New test.

	* g++.old-deja/g++.law/refs4.C: Mark as XFAIL.
	* g++.old-deja/g++.law/temps4.C: Likewise.

	* g++.old-deja/g++.brendan/code-gen4.C: Include stdio.h and
	stdlib.h.  Call abort() on failure.
	* g++.old-deja/g++.law/refs4.C: Likewise.
	* g++.old-deja/g++.law/temps4.C: Likewise.
	* g++.old-deja/g++.brendan/complex1.C: Don't assume argc is 1.
	* gcc.c-torture/execute/20000112-1.c: Include string.h.	

2000-05-27  Zack Weinberg  <zack@wolery.cumb.org>

	Relative to g++.dg/special:
	* conpr-1.C, conpr-2.C, conpr-3.C: Include stdlib.h.

	Relative to g++.old-deja:
	* g++.brendan/complex1.C, g++.jason/optimize2.C,
	g++.mike/p9732b.C, g++.other/addrof1.C, g++.other/dyncast5.C,
	g++.other/init5.C, g++.other/init7.C, g++.other/union2.C,