@@ -1,3 +1,7 @@
+2000-06-05  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.c-torture/execute/20000605-1.c: New test.
+
 2000-06-05  Jakub Jelinek  <jakub@redhat.com>
 	    Nathan Sidwell <nathan@codesourcery.com>
 
